<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:expandableTextView="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.durgasamples412.watchit.MovieDetails"
    android:background="@color/colorPrimaryDark"
    tools:showIn="@layout/activity_movie_details">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="About"
                android:textColor="@color/colorAccent"
                android:gravity="start"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="6dp"
                style="@style/TextAppearance.AppCompat.Subhead"/>
            </FrameLayout>
            <com.ms.square.android.expandabletextview.ExpandableTextView
                android:id="@+id/expand_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                expandableTextView:maxCollapsedLines="3"
                expandableTextView:animDuration="200">
                <TextView
                    android:id="@id/expandable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:textSize="16sp"
                    android:textColor="#ffffff" />

                <ImageButton
                    android:id="@id/expand_collapse"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:layout_gravity="center_horizontal"
                    android:background="@android:color/transparent"/>
            </com.ms.square.android.expandabletextview.ExpandableTextView>


            <FrameLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/detailstrailertext"
                    android:gravity="start"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/trailers"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    />
            </FrameLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/Trailersrv"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="6dp"
                android:id="@+id/view1"
                android:visibility="invisible"
                android:background="@android:color/darker_gray"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/castTitle"
                android:gravity="start"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:text="@string/cast"
                android:textColor="@color/colorAccent"
                android:layout_marginLeft="10dp"
                />
        </FrameLayout>
        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:id="@+id/castRv"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/view2"
                android:visibility="invisible"
                android:layout_marginTop="6dp"
                android:background="@android:color/darker_gray"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_margin="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/crewTitle"
                    android:gravity="start"
                    style="@style/TextAppearance.AppCompat.Subhead"
                    android:text="@string/crew"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="10dp"
                    />
            </FrameLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:id="@+id/crewRv"
                android:layout_height="wrap_content">

            </android.support.v7.widget.RecyclerView>


        </LinearLayout>

    </ScrollView>
</android.support.v4.widget.NestedScrollView>
